--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.0",
     "craco-less": "^1.17.0",
     "less-loader": "^7.1.0",
+    "lodash": "^4.17.20",
     "moment-timezone": "^0.5.32",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
